# restautant

./: .env  README.md  index.html  package-lock.json  package.json  vite.config.js
public/: pdf-viewer.html
src/: App.css  App.jsx  main.jsx  mockInvoke.js  tauri.js  tauriInvoke.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  db.rs  main.rs  orders.rs  printer.rs  products.rs  reports_cash.rs  state.rs  users.rs
src-tauri/src/commands/user/: auth.rs  crud.rs  mod.rs  model.rs
src/Pages/Home/: index.jsx
src/Pages/Login/: index.jsx  recoverPass.jsx
src/Pages/Products/: index.jsx  new.jsx
src/Pages/Users/: index.jsx  new.jsx
src/api/: auth.js  orders.js  printers.js  products.js  reports.js  tauri.js  users.js
src/components/: ConfirmDialog.jsx  PrinterPicker.jsx
src/components/NavBar/: index.jsx
src/components/layout/: AppLayout.jsx  Navbar.jsx
src/components/ui/: button.jsx  dropdown-menu.jsx
src/features/auth/: Login.jsx
src/features/cash/: CashPage.jsx
src/features/home/: Home.jsx
src/features/orders/: OrderCard.jsx  OrderDetailsModal.jsx  OrderFormCreate.jsx  OrderTable.jsx  OrderToolbar.jsx  OrdersBoard.jsx  OrdersPage.jsx  openPdfViaRust.js
src/features/products/: ProductFormCreate.jsx  ProductFormEdit.jsx  ProductGrid.jsx  ProductTable.jsx  ProductToolbar.jsx  ProductsPage.jsx  validators.js
src/features/profile/: ProfilePage.jsx
src/features/users/: roles.js  (+6 more)
src/hooks/: usePrinterSelection.js
src/routes/: ProtectedRoute.jsx
src/store/: session.js
src/utils/: date.js  money.js  print.js  receipts.js
(+3 files in other folders)
