[package]
name = "Holabebe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "babyshop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
tauri = { version = "2.8.1", features = [] }
tauri-plugin-opener = "2"
escpos = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
cookie = "0.18"

tokio = { version = "1.38", features = ["full"] }
futures-util = "0.3"

argon2 = "0.5"
password-hash = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }

anyhow = "1"
thiserror = "2.0.15"
parking_lot = "0.12"

mongodb = { version = "3.2.3", default-features = false, features = [
  "sync", "rustls-tls", "dns-resolver", "compat-3-0-0"
] }

winprint = { version = "0.2", features = ["pdfium"] }
genpdf = "0.2"
serialport = "4"
